tests/fixtures/fail/copy_nominal_transitive_invalid_impl.sc
let Leaf = struct(value: i32)

let Branch = struct(leaf: Leaf)

let Tree = struct(branch: Branch)

extend Branch: Copy {}

extend Tree: Copy {}

let main(): i32 = 42
